syntax = "proto3";

package go_blog.blog;

option  go_package ="github.com/baker-yuan/go-blog/protocol/datasync";

import "validate/validate.proto";
import "trpc/proto/trpc_options.proto";
import "trpc/swagger/swagger.proto";

// trpc参考
// https://github.com/trpc-group/trpc-cmdline/blob/483259c22a2fd1e477c7ebc4b5b1572a5a47010c/docs/examples/example-1/README.zh_CN.md
// https://github.com/trpc-group/trpc-cmdline/blob/483259c22a2fd1e477c7ebc4b5b1572a5a47010c/docs/examples/example-2/README.zh_CN.md


// 数据变动
message TableChange {
  // 库名
  string db_name = 1;
  // 表名
  string tb_name = 2;
  // 变更字段，优先取变更后的值，没有取变更前
  // key=字段名 value=字段值
  map<string, string> column_map = 3;
  // 变更前
  // key=字段名 value=字段值
  map<string, string> before_column_map = 4;
  // 变更后
  // key=字段名 value=字段值
  map<string, string> after_column_map = 5;
}

// 数据发送变化
message DataChangeRsp {
}


service DataSyncApi {
  // 数据发送变化
  rpc DataChange(stream TableChange) returns (DataChangeRsp) {
    option(trpc.alias) = "/datasync/dataChange";
  }
}